--- a/src/chrome/skin/overlay.css
+++ b/src/chrome/skin/overlay.css
@@ -12,31 +12,31 @@ menuitem.ae-clippings-clipping {
 }
 
 /* Clipping labels */
-menuitem.ae-clippings-clipping[clipLabel="red"] {
+menuitem.ae-clippings-clipping[data-clipping-label="red"] {
   list-style-image: url("chrome://clippings/skin/images/clipping-red.svg");
 }
 
-menuitem.ae-clippings-clipping[clipLabel="orange"] {
+menuitem.ae-clippings-clipping[data-clipping-label="orange"] {
   list-style-image: url("chrome://clippings/skin/images/clipping-orange.svg");
 }
 
-menuitem.ae-clippings-clipping[clipLabel="yellow"] {
+menuitem.ae-clippings-clipping[data-clipping-label="yellow"] {
   list-style-image: url("chrome://clippings/skin/images/clipping-yellow.svg");
 }
 
-menuitem.ae-clippings-clipping[clipLabel="green"] {
+menuitem.ae-clippings-clipping[data-clipping-label="green"] {
   list-style-image: url("chrome://clippings/skin/images/clipping-green.svg");
 }
 
-menuitem.ae-clippings-clipping[clipLabel="blue"] {
+menuitem.ae-clippings-clipping[data-clipping-label="blue"] {
   list-style-image: url("chrome://clippings/skin/images/clipping-blue.svg");
 }
 
-menuitem.ae-clippings-clipping[clipLabel="purple"] {
+menuitem.ae-clippings-clipping[data-clipping-label="purple"] {
   list-style-image: url("chrome://clippings/skin/images/clipping-purple.svg");
 }
 
-menuitem.ae-clippings-clipping[clipLabel="grey"] {
+menuitem.ae-clippings-clipping[data-clipping-label="grey"] {
   list-style-image: url("chrome://clippings/skin/images/clipping-grey.svg");
 }
 
@@ -67,7 +67,7 @@ menu.ae-clippings-folder-menu[open="true"] {
 /* Thunderbird integration */
 @media all {
   #ae-clippings-icon {
-    list-style-image: url("chrome://clippings-laf/skin/images/clippings16-tb.svg");
+      list-style-image: url("chrome://clippings-laf/skin/images/clippings16-tb.svg");
   }
 }
 
